feat: rework permissions, user list and user editions